--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,8 +2,8 @@ version: "3.5"
 
 services:
   diun:
-    image: xrit-rx:3
-    container_name: xrit-rx
+    image: zalgar/xrit-rx-docker:latest
+    container_name: xrit-rx-docker
     volumes:
       - "./xrit-rx.ini:/xrit-rx/xrit-rx.ini"
 #      - "./EncryptionKeyMessage.bin:/xrit-rx/EncryptionKeyMessage.bin"
