--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,12 +8,12 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
+        
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-        with:
-           platforms: 'arm64,arm'
+        uses: docker/setup-qemu-action@v3
+        
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
          
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -25,5 +25,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: docker/
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: zalgar/xrit-rx-docker:latest
