--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.5"
 
 services:
-  diun:
+  xrit-rx-docker:
     image: zalgar/xrit-rx-docker:latest
     container_name: xrit-rx-docker
     volumes:
