--- a/docker/xrit-rx.ini
+++ b/docker/xrit-rx.ini
@@ -15,7 +15,7 @@ xrit = false
 channel_blacklist =
 
 [goesrecv]
-ip = 127.0.0.1
+ip = 127.0.0.1 #change this to point to goesrecv server localhost here wont work.
 vchan = 5004
 
 [osp]
