--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,13 +1,87 @@
-name: Build and Push Docker image to Docker Hub
+name: Build and Release
 
-on: push
+on: 
+  push:
+    branches: [ master ]
+  release:
+    types: [published]
+  workflow_dispatch:
+
 jobs:
+  build_release:
+    name: Build Release Package
+    runs-on: ubuntu-latest
+    if: github.event_name == 'release' || github.event_name == 'workflow_dispatch'
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v4
+        
+      - name: Set up Node.js (for Sass)
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          
+      - name: Install Sass
+        run: npm install -g sass
+        
+      - name: Create release directory structure
+        run: |
+          mkdir -p release
+          mkdir -p release/tools
+          mkdir -p release/tools/libjpeg
+          mkdir -p release/html
+          mkdir -p release/html/js
+          mkdir -p release/html/css
+          
+      - name: Copy Python files
+        run: |
+          cp src/*.py release/
+          cp src/tools/*.py release/tools/
+          cp src/tools/libjpeg/* release/tools/libjpeg/
+          
+      - name: Copy HTML and JS files
+        run: |
+          cp src/html/*.html release/html/
+          cp src/html/js/*.js release/html/js/
+          
+      - name: Compile Sass to CSS
+        run: |
+          sass --no-source-map src/html/css:release/html/css
+          
+      - name: Copy config and requirements
+        run: |
+          cp src/*.ini release/ || true
+          cp requirements.txt release/
+          
+      - name: Create zip archive
+        run: |
+          cd release
+          zip -r ../xrit-rx.zip .
+          cd ..
+          
+      - name: Upload release artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: xrit-rx-release
+          path: xrit-rx.zip
+          
+      - name: Upload to release (if triggered by release)
+        if: github.event_name == 'release'
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./xrit-rx.zip
+          asset_name: xrit-rx.zip
+          asset_content_type: application/zip
+
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -16,13 +90,13 @@ jobs:
         uses: docker/setup-buildx-action@v3
          
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
     
       - name: Build and push Docker image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: docker/
           platforms: linux/amd64,linux/arm64
