--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,14 +33,16 @@ jobs:
           
       - name: Compile Sass to CSS (overwrite copied SCSS)
         run: |
-          sass --no-source-map src/html/css/dash.scss:release/html/css/dash.css
+          sass --no-source-map release/html/css/dash.scss:release/html/css/dash.css
           
       - name: Verify CSS compilation
         run: |
           echo "=== Checking CSS files ==="
           ls -la release/html/css/
           echo "=== CSS file content preview ==="
-          head -20 release/html/css/dash.css
+          head -30 release/html/css/dash.css
+          echo "=== Checking for progress styles ==="
+          grep -A 5 -B 5 "progress" release/html/css/dash.css || echo "No progress styles found"
           
       - name: Clean up development files
         run: |
