--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -101,7 +101,7 @@ jobs:
           asset_content_type: application/zip
 
   push_to_registry:
-    name: Push Docker image to Docker Hub
+    name: Push Docker image to Docker Hub and GitHub Container Registry
     runs-on: ubuntu-latest
     # Only run Docker build on releases or manual workflow dispatch
     if: github.event_name == 'release' || github.event_name == 'workflow_dispatch'
@@ -120,14 +120,24 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
     
       - name: Determine Docker tags
         id: docker_tags
         run: |
+          # Convert repository name to lowercase for ghcr.io
+          REPO_LOWER=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          
           if [ "${{ github.event_name }}" = "release" ]; then
-            echo "tags=zalgar/xrit-rx-docker:latest,zalgar/xrit-rx-docker:${{ github.event.release.tag_name }}" >> $GITHUB_OUTPUT
+            echo "tags=zalgar/xrit-rx-docker:latest,zalgar/xrit-rx-docker:${{ github.event.release.tag_name }},ghcr.io/${REPO_LOWER}:latest,ghcr.io/${REPO_LOWER}:${{ github.event.release.tag_name }}" >> $GITHUB_OUTPUT
           else
-            echo "tags=zalgar/xrit-rx-docker:latest" >> $GITHUB_OUTPUT
+            echo "tags=zalgar/xrit-rx-docker:latest,ghcr.io/${REPO_LOWER}:latest" >> $GITHUB_OUTPUT
           fi
           
       - name: Build and push Docker image
